--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,8 +12,8 @@ website:
       - Skills.qmd
       - Honors.qmd
       - Contact.qmd
-      - Midterm_explanation.qmd
-      - Midterm_recording.qmd
+      - Projects.qmd
+
 
 format:
   html:
